<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">వరి పైరు సస్యరక్షణ</string>
    <string name="action_settings" tools:ignore="ExtraTranslation">Settings</string>
    <string name="app_title">వరి లో సమగ్ర సస్యరక్షణ - అరచేతిలో ఐపిఎమ్</string>
    <string name="home_title">వరి లో సమగ్ర సస్యరక్షణ - అరచేతిలో ఐపిఎమ్</string>
    <string name="rice_protection_">

        సుడి తెగులు /గోధుమ వర్ణపు దోమ /తెల్ల వీపు దోమ

        గుర్తించడము ఎలా

గోధుమ రంగులో ఉండే తల్లి, పిల్ల పురుగులు వరి దుబ్బుల మొదళ్ల దగ్గర గుంపులుగా చేరి కాండం నుంచి రసాన్ని పీల్చి వేయడం వల్ల క్రమేపీ మొక్కలు సుడులుగా ఎండిపోతాయి. దీన్నే “సుడి తెగులు“ అంటారు. తెల్లవీపుదోమ కూడా గోధుమ వర్ణపు దోమవలె వరి మొక్కలోని రసాన్ని పీల్చి నష్టం చేస్తుంది.

<b>యాజమాన్య పద్ధతులు</b>

> దోమ ఎక్కువగా వున్నప్రదేశాలలో నాటేటప్పుడు ప్రతి రెండు మీటర్లకు 30 సెంటిమీటర్ల చొప్పున కాలిబాటలు తీయాలి.

> దోమ సోకిన పొలములో నుండి మురుగు/నిల్వ నీటిని తీసివేయాలి మరియు కుదుళ్ళకు గాలి సోకే విధముగా చేయాలి. పొలాన్ని ఆరగట్టి తిరిగి నీటిని పెట్టడం ద్వారా దోమల ఉధృతిని తగ్గించవచ్చు.

> డెల్టామిత్రిన్, సైపర్ మిత్రిన్, ల్యాంబ్డా సైహలోత్రిన్ (సింథెటిక్ ఫైరిత్రోఇడ్స్) లాంటి దోమను పునరుత్థానం (రిసర్జెన్స్) కలిగించు క్రిమి సంహారక మందులను అస్సలు వాడరాదు. దుబ్బుకు సగటున 10 -15 దోమలు ఈ క్రింద సూచించిన పురుగు మందులను పిచికారి చేసుకొనవలెను :

ఎకరానికి బుప్రోఫోజిన్ 25 ఎస్.సి. 400 మి.లీ (లేదా) అసిఫేట్ 75 డబ్ల్యు. పి 250 గ్రా (లేదా) డైనెటోఫ్యురాన్ 20 ఎస్. జి. 80 గ్రా (లేదా) గ్లామోర్ 80 డబ్ల్యు.పి 50 గ్రా (లేదా) ప్యమెట్రోజిన్ 50 డబ్ల్యు. పి 120 గ్రా పిచికారి చేయాలి .

ఒకసారి వాడిన మందును మరల వాడకుండా, పైన ఇచ్చిన మందులలో నుండి వేరే దానిని సిఫారసు చేసిన మోతాదులో వరి దుబ్బు మొదళ్ళు తడిసే లాగా పిచికారి చేయవలెను.
    </string>
    <string name="rice_protection" formatted="false">
        <![CDATA[

        <b>సుడి తెగులు /గోధుమ వర్ణపు దోమ /తెల్ల వీపు దోమ</b><br></br>

        గుర్తించడము ఎలా<br></br>

గోధుమ రంగులో ఉండే తల్లి, పిల్ల పురుగులు వరి దుబ్బుల మొదళ్ల దగ్గర గుంపులుగా చేరి కాండం నుంచి రసాన్ని పీల్చి వేయడం వల్ల క్రమేపీ మొక్కలు సుడులుగా ఎండిపోతాయి. దీన్నే “సుడి తెగులు“ అంటారు. తెల్లవీపుదోమ కూడా గోధుమ వర్ణపు దోమవలె వరి మొక్కలోని రసాన్ని పీల్చి నష్టం చేస్తుంది.<br></br>

<b>యాజమాన్య పద్ధతులు</b><br></br>

> దోమ ఎక్కువగా వున్నప్రదేశాలలో నాటేటప్పుడు ప్రతి రెండు మీటర్లకు 30 సెంటిమీటర్ల చొప్పున కాలిబాటలు తీయాలి.<br></br>

> దోమ సోకిన పొలములో నుండి మురుగు/నిల్వ నీటిని తీసివేయాలి మరియు కుదుళ్ళకు గాలి సోకే విధముగా చేయాలి. పొలాన్ని ఆరగట్టి తిరిగి నీటిని పెట్టడం ద్వారా దోమల ఉధృతిని తగ్గించవచ్చు.<br></br>

> డెల్టామిత్రిన్, సైపర్ మిత్రిన్, ల్యాంబ్డా సైహలోత్రిన్ (సింథెటిక్ ఫైరిత్రోఇడ్స్) లాంటి దోమను పునరుత్థానం (రిసర్జెన్స్) కలిగించు క్రిమి సంహారక మందులను అస్సలు వాడరాదు. దుబ్బుకు సగటున 10 -15 దోమలు ఈ క్రింద సూచించిన పురుగు మందులను పిచికారి చేసుకొనవలెను :

ఎకరానికి బుప్రోఫోజిన్ 25 ఎస్.సి. 400 మి.లీ (లేదా) అసిఫేట్ 75 డబ్ల్యు. పి 250 గ్రా (లేదా) డైనెటోఫ్యురాన్ 20 ఎస్. జి. 80 గ్రా (లేదా) గ్లామోర్ 80 డబ్ల్యు.పి 50 గ్రా (లేదా) ప్యమెట్రోజిన్ 50 డబ్ల్యు. పి 120 గ్రా పిచికారి చేయాలి .

ఒకసారి వాడిన మందును మరల వాడకుండా, పైన ఇచ్చిన మందులలో నుండి వేరే దానిని సిఫారసు చేసిన మోతాదులో వరి దుబ్బు మొదళ్ళు తడిసే లాగా పిచికారి చేయవలెను.
        ]]>
    </string>
    <string name="sudi_thegulu_identify" formatted="false">
        <![CDATA[

        <b>గుర్తించడము ఎలా?</b><br></br>

> తొలి దశలో దోమ ఆశించిన మొక్కలు లేత పసుపు రంగులో మారుతాయి.<br></br>

> క్రమేపి మొక్కలు సుడులుగా ఎండిపోతాయి.<br></br>

> గోధుమ రంగు దోమలు కానీ తెల్లవీపు దోమలు కానీ మొదళ్ళ దగ్గర గుంపులుగా కనపడతాయి.<br></br>

> కుబుసం లాంటి తెల్లని దోమల చర్మములు కుడా కనిపిస్తాయి.<br></br>

> వరి మొక్కల మధ్య దూరము తక్కువగా వున్నచోట, పిలకలు ఎక్కువగా వచ్చిన చోట, ఈ పురుగు ఆశించటం మొదలవుతుంది.<br></br>
        ]]>
    </string>
    <string name="sudi_thegulu_prop_methods" formatted="false">"         <![CDATA[  <b>యాజమాన్య పద్ధతులు</b><br></br>  <b>నిరోధక శక్తి కలిగిన రకాలు</b><br></br>  > కాటన్ దొర సన్నాలు(ఎం.టి.యు.1010), విజేత(ఎం.టి.యు.1001), చైతన్య(ఎం.టి.యు.2067),   కృష్ణవేణి(ఎం.టి.యు.2077), సూర్య(బి.పి.టి.4358), వజ్రం(ఎం.టి.యు.5249), ప్రతిభ(ఎం.టి.యు.5293),   దీప్తి(ఎం.టి.యు.4870), గోదావరి(ఎం.టి.యు.1032) సాగు చేసుకోవాలి.<br></br>  <b>సాగు పద్ధతులు</b><br></br>  > కాలిబాటలు తీయాలి - నాటేటప్పుడు ప్రతి రెండు మీటర్లకు 30 సెంటిమీటర్ల దారి వదలాలి.<br></br>  > మురుగు/నిల్వ నీటిని తీసివేయాలి మరియు కుదుళ్ళకు గాలి సోకే విధముగా చేయాలి.<br></br>  > పొలాన్ని ఆరగట్టి తిరిగి నీటిని పెట్టడం ద్వారా దోమల ఉధృతిని తగ్గించవచ్చు.<br></br>
    <b>జైవిక పద్ధతులు - </b><br></br>  > వరిలో ఎన్నో మిత్ర పురుగులు కూడా ఉంటాయి.<br></br>  > దోమలను, వాటి గ్రుడ్లను తినే మిత్ర పురుగులయిన మిరిడ్ పురుగులు, సాలీళ్లు, అక్షింతల పురుగులు మరియు అనాగృస్, ఆలిగోసిట అను గ్రుడ్ల పరాన్న జీవులు, మైక్రోవిలియా,మీసోవిలియా అను జలచరాలు, దోమలు వృద్ధి కాకుండా ఎప్పుడూ అదుపులో ఉంచుతాయి. కాబట్టి వీటిని సంరక్షించుకోవటం చాలా అవసరము.<br></br>  > బంతి, బెండ, అలసంద, పిల్లిపెసర, జనుము, కొత్తిమీర, నువ్వులు, సోంపు లాంటి పంటలను వరి గట్ల మీద పెంచుకోవచ్చు. వీటి తేనే, పుప్పొడి వలన మిత్ర పురుగులు ఎక్కవ కాలము బ్రతుకుతాయి మరియు వృద్ధి చెందుతాయి.<br></br>
     <b>కీటక నాశినులు</b><br></br>
     > సింథెటిక్ ఫైరిత్రాఇడ్స్ (డెల్టామిత్రిన్, సైపర్ మిత్రిన్, ల్యాంబ్డా సైహలోత్రిన్) లాంటి దోమను పునరుత్థానం (రిసర్జెన్స్) కలిగించు క్రిమి సంహారక మందులను అస్సలు వాడరాదు.<br></br>
     > దుబ్బుకు సగటున 10 -15 దోమలు ఉంటే ఎకరానికి<br></br>
     &nbsp&nbsp> బుప్రోఫెజిన్ 25 ఎస్.సి. 400 మి.లీ (లేదా)<br></br>
     &nbsp&nbsp> అసిఫేట్ 75 డబ్ల్యు. పి 250 గ్రా (లేదా)<br></br>
     &nbsp&nbsp> డైనోటోఫ్యురాన్ 20 ఎస్. జి. 80 గ్రా (లేదా)<br></br>
     &nbsp&nbsp> గ్లామోర్ 80 డబ్ల్యు.పి 50 గ్రా (లేదా)<br></br>
     &nbsp&nbsp> పైమెట్రోజిన్ 50 డబ్ల్యు. పి. 120 గ్రా. పిచికారి చేయాలి .<br></br>
     > ఒకసారి వాడిన పురుగు మందును మరల వాడకుండా, సిఫారసు చేసిన మోతాదులో, వరి దుబ్బు మొదళ్ళు తడిసే లాగా పిచికారి చేయవలెను.<br></br><br></br>          ]]>     "</string>
    <string name="kampu_nalli_identify" formatted="false">
        <![CDATA[
<b>గుర్తించడము ఎలా?</b><br></br>

> పిల్ల పురుగులు మరియు పెద్ద పురుగులు పంట ఈనిన దగ్గర్నుండి కంకుల మీద కనిపిస్తాయి.<br></br>

> తాలు గింజల కనిపిస్తాయి.<br></br>

> గింజలు మీద రసాన్ని పీల్చడము వలన ఏర్పడిన మచ్చ కనిపిస్తుంది.<br></br>

> నల్లి ఆశించిన పొలములో దుర్వాసన వస్తుంది.<br></br>
        ]]>
        </string>
    <string name="kampu_nalli_prop_methods" formatted="false">
        <![CDATA[
        <b>యాజమాన్య పద్ధతులు</b><br></br>
<b>సాగు పద్ధతులు</b><br>

> గట్ల మీద, వరి పొలంలో కలుపు మొక్కలను తీసివేయాలి.<br></br>

<b>కీటక నాశినులు</b><br></br>

> ఈ క్రింది పురుగు మందులను నీటిలో కలిపి పిచికారి చేయవలెను<br></br>

&nbsp&nbsp> ఎకరానికి మోనోక్రోటోఫాస్ 36 డబ్ల్యు.ఎస్.సి 625 మి.లీ. (లేదా)<br></br>

&nbsp&nbsp> క్లోరోపైరిఫాస్ 20 ఇ.సి. 1000 మి.లీ.<br></br>

> పైన ఇవ్వబడిన మందులు పొలము అంచు నుండి చుట్టూ తిరుగుతూ మథ్యకు చేరే విధంగా సాయంత్రం వేళల్లో పిచికారీ చేయవలెను.<br></br><br></br>
        ]]>
        </string>
    <string name="kandamu_tholuchu_purugu_identify" formatted="false">
        <![CDATA[
<b>గుర్తించడము ఎలా?</b><br></br>

> ఈ పురుగు ఆశించిన పొలములో తల్లి పురుగులు లేదా ఆకుల చివర గుడ్ల సముదాయము కనిపిస్తాయి.<br></br>

> దుబ్బు చేసే దశలో ఎండిపోయిన మొవ్వులు కనిపిస్తాయి.<br></br>

> చనిపోయిన మొవ్వులను లాగితే తేలికగా ఊడి వస్తాయి.<br></br>

> ఈనిన పొలములో తెల్ల కంకులు కనిపిస్తాయి.<br></br>
        ]]>
        </string>
    <string name="kandamu_tholuchu_prop_methods" formatted="false">
        <![CDATA[
<b>యాజమాన్య పద్ధతులు</b><br></br>

<b>సాగు పద్ధతులు</b><br></br>

> వేసవిలో లోతైన దుక్కులను దున్నినచో పురుగులు ఎండకి చనిపోవును.<br></br>

> నాట్లు తగిన సమయములో వేయాలి, ఆలస్యము చేసినచో పురుగు తాకిడి ఎక్కువగా వుంటుంది.<br></br>

> నాటే సమయములో వరి నారు చివర్లను తుంచి నాటాలి.<br></br>

> పురుగుల పర్యవేక్షణకు ఎకరానికి 3 లింగార్షక బుట్టలు పెట్టవలెను. ఈ బుట్టలలో వారానికి 35 పురుగులు కనిపించినచో నివారణ చర్యలు చేపట్టవలెను.<br></br>

<b>జైవిక పద్ధతులు</b><br></br>

> గ్రుడ్ల పరాన్న జీవులయిన ట్రైకోగ్రమ్మ జపానికం పురుగులను హెక్టారుకు లక్ష చొప్పున 5 నుండి 6 సార్లు నాటిన 15 రోజుల నుండి విడుదల చేయాలి. ఈ గ్రుడ్ల కార్డులను ఆకు పైన పిన్ చేయాలి.<br></br>

<b>కీటక నాశినులు</b><br></br>

> పిలకలు వేసే దశలో 5% మొవ్వులు ఎండిపోయినచొ లేదా చదరపు మీటరుకు ఒక తల్లి పురుగు లేదా ఒక గుడ్ల సముదాయము కనిపించినచో ఈ క్రింద మందులలో ఏదైనా ఒకదానిని ఉపయోగించవలెను:<br></br>

&nbsp&nbsp> కార్బో ఫ్యూరాన్ 3 జి గుళికలు 10 కిలోలు (లేదా)<br></br>


&nbsp&nbsp> కార్టాప్ హైడ్రోక్లోరైడ్ 50 డబ్ల్యు.పి 400 గ్రా (లేదా)<br></br>

&nbsp&nbsp> క్లోరాన్ట్రినిల్ప్రోల్ (రినాక్సిపర్) 18.5 ఎస్.సి. 200 మి.లీ. (లేదా)<br></br>

&nbsp&nbsp> అసిఫేట్ 75 డబ్ల్యు పి 250 గ్రా ఎకరానికి స్ప్రే చేయాలి.<br></br><br></br>
        ]]>
        </string>
    <string name="thataku_thegulu_identify" formatted="false">
        <![CDATA[
<b>గుర్తించడము ఎలా?</b><br></br>

> శరీరముపై ముళ్ళు కలిగి వున్న నీలివర్ణపు నలుపు రంగులో వుండే పెద్ద పురుగులు వరి ఆకుల మీద కనిపించును.<br></br>

> గోకి తిన్న ఆకుల పై తెల్లని చారలు చారలుగా కనిపిస్థాయి.<br></br>

> ఆకు రెండు పొరల మధ్య చొచ్చుకొనిపోయిన పిల్ల పురుగులు, పచ్చని పదర్థాన్ని తింటూ కనిపిస్తాయి.<br></br><br></br>

        ]]>
        </string>
    <string name="thataku_thegulu_prop_methods" formatted="false">
        <![CDATA[
<b>యాజమాన్య పద్ధతులు</b><br></br>

<b>సాగు పద్ధతులు</b><br></br>

> గట్లమీద, పొలంలో కలుపు లేకుండా శుభ్రం చేసుకోవాలి.<br></br>

<b>కీటక నాశినులు</b></br></br>

> దుబ్బుకి రెండు పురుగులు కనిపించినచో ఈ క్రింది మందులను స్ప్రే చేసుకొనవలెను<br></br>

&nbsp&nbsp> క్వినాల్ ఫాస్ 25 ఇ.సి. 800 మి.లీ. (లేదా)<br></br>

&nbsp&nbsp> ప్రొఫినోఫాస్ 50 ఇ.సి. 400 మి.లీ. ఎకరానికి పిచికారి చేసుకొనవలెను.<br></br><br></br>

        ]]>
        </string>
    <string name="thella_rogam_identify" formatted="false">
        <![CDATA[
<b>గుర్తించడము ఎలా?</b><br></br>

> పొలములో నడుస్తుంటే రెక్కల పురుగులు ఎగురుతూ కనిపిస్తాయి.<br></br>

> ఆకు పచ్చని పిల్ల పురుగు ఆకు మీద పచ్చదనాన్ని తినటము వలన ఆకు తెల్లగా కనిపిస్తుంది.<br></br>

> మడచి కుట్టినట్లున్న ఆకులలో ఆకుపచ్చ పిల్ల పురుగు మరియు నల్లని మలమూత్రాదులు కనిపిస్తాయి.<br></br>

> పురుగు ఎక్కువగా ఆశించిన పొలము దూరము నుండి తెల్లగా కనిపిస్తుంది.<br></br><br></br>

        ]]>
        </string>
    <string name="label_aggi_thegulu">అగ్గి తెగులు / మెడ విరుపు తెగులు</string>
    <string name="label_pamu_poda_tegulu">పాముపొడ తెగులు</string>
    <string name="label_godhuma_akumacha__thegulu">గోధుమ రంగు ఆకుమచ్చ తెగులు</string>
    <string name="label_potta_kullu_tegulu">పొట్ట కుళ్ళు తెగులు</string>
    <string name="label_mani_pandu_thegulu">మానిపండు తెగులు / కాటుక తెగులు</string>
    <string name="label_bacteria_endu_thegulu">బాక్టీరియా ఆకు ఎండు తెగులు</string>
    <string name="label_tungro_virus_tegulu">టుంగ్రోవైరస్ తెగులు</string>
    <string name="label_bakane_thegulu">బకానే తెగులు/ఫుట్ రాట్</string>
    <string name="label_kandam_kullu_tegulu">కాండం కుళ్ళు తెగులు</string>
    <string name="label_variginja_marpu_tegulu">వరి గింజ రంగు మార్పు తెగులు</string>
    <string name="label_natrajani_lopam">నత్రజని లోపం</string>
    <string name="label_bhaswaram_lopam">భాస్వరం లోపం</string>
    <string name="label_potassium_lopam">పొటాషియం లోపం</string>
    <string name="label_gandhakam_lopam">గంధకం</string>
    <string name="label_zink_lopam">జింకు లోపం</string>
    <string name="label_inumu_lopam">ఇనుము లోపం</string>
    <string name="label_choudu_lopam">చౌడునేలలు</string>
</resources>