<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_natrajani_lopam"
            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:onClick="onClickMenuItemOne"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/img_menu_natrajani_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_natrajani_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bhaswaram_lopam"
            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/img_menu_bhaswaram_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_bhaswaram_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_potassium_lopam"

            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_potassium_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_potassium_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_gandhakam_lopam"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_gandhakam_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_gandhakam_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_zink_lopam"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_zink_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_zink_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_inumu_lopam"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_inumu_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_inumu_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_choudu_lopam"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_choudu_nelalu_lopam"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_choudu_lopam"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>