<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_aggi_tegulu"
            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:onClick="onClickMenuItemOne"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/menu_aggi_thegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_aggi_thegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pamu_poda_thegulu"
            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/menu_pamu_poda_thegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_pamu_poda_tegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_godhuma_akumacha"

            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/menu_godhuma_akumacha_thegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_godhuma_akumacha__thegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_potta_kullu"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/menu_potta_kullu_thegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_potta_kullu_tegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_mani_pandu"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/menu_mani_pandu_thegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_mani_pandu_thegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_bac_endu"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/menu_bacteria_endu_thegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_bacteria_endu_thegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bakane_tegulu"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_bakane_tegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_bakane_thegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_kandam_kullu_tegulu"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_kandam_kullu_tegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_kandam_kullu_tegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_varigija_tegulu"


            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/img_menu_variginja_marpu_tegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_variginja_marpu_tegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_tungro"
            style="@style/menuLinearlayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/menu_tungro_virus_tegulu"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/label_tungro_virus_tegulu"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/ll_menu_eight"-->
            <!--style="@style/menuLinearlayoutStyle"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="90dp"-->
                <!--android:layout_height="90dp"-->
                <!--android:layout_marginLeft="8dp"-->
                <!--android:layout_marginStart="8dp"-->
                <!--app:srcCompat="@drawable/img_menu_aaku_nalli"-->
                <!--tools:layout_editor_absoluteY="16dp" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:paddingLeft="5dp"-->
                <!--android:text="@string/label_aaku_nalli"-->
                <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />-->

        <!--</LinearLayout>-->


    </LinearLayout>
</ScrollView>